Fixing logout button style on mobile.

--- a/public/scss/_nav.scss
+++ b/public/scss/_nav.scss
@@ -120,7 +120,7 @@ $light-blue: #0971ce;
       input{
         margin: auto;
         border: none;
-        background: white;
+        // background: white;
         font-size: 1.3rem;
         color: black;
         font-weight: 700;
